# trocadalho-generator-bot

./: .env.example  README.md  pyproject.toml
src/: main.py
src/service/: trocadalho_generator.py
